--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,19 @@
     <artifactId>tensquare-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>tensquare-common</module>
+        <module>tensquare_common</module>
+        <module>tensquare_base</module>
+        <module>tensquare_config</module>
+        <module>tensquare_eureka</module>
+        <module>tensquare_friend</module>
+        <module>tensquare_manager</module>
+        <module>tensquare_qa</module>
+        <module>tensquare_recruit</module>
+        <module>tensquare_search</module>
+        <module>tensquare_sms</module>
+        <module>tensquare_spit</module>
+        <module>tensquare_user</module>
+        <module>tensquare_web</module>
     </modules>
     <packaging>pom</packaging>
 
