--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 *.iml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
+.idea
 # ignore all .idea directory
 tensquareForward/.idea
 vue-admin-template-master/.idea
