--- a/tensquare_user/pom.xml
+++ b/tensquare_user/pom.xml
@@ -41,6 +41,10 @@
             <version>2.3.0.DATAREDIS-1053-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 
 
